2006-01-02  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert-data.h
	* app/core/gimpimage-convert.c: applied patch by Adam D. Moss that
	replaces the default dither matrix by a 32x32 Bayer pattern (see
	bug #136604).

2005-12-30  DindinX  <dindinx@gimp.org>

	* libgimpmath/gimpvector.c
	* libgimpconfig/gimpconfig-deserialize.c: shut up some compiler
	warnings.

2005-12-30  DindinX  <dindinx@gimp.org>

	* plug-ins/ifscompose/ifscompose_utils.c: fixed some compiler warnings
	and did some cleanups.

2005-12-30  DindinX  <dindinx@gimp.org>

	* plug-ins/gfig/gfig-arc.c
	* plug-ins/gfig/gfig-grid.c
	* plug-ins/gfig/gfig-poly.c
	* plug-ins/gfig/gfig-spiral.c
	* plug-ins/gfig/gfig-star.c: fixed some compiler warnings and did some
	cleanups.

2005-12-30  DindinX  <dindinx@gimp.org>

	* plug-ins/common/depthmerge.c: fixed some compiler warnings and did
	some cleanups.

2005-12-30  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainerentry.c (gimp_container_entry_init):
	set "inline-completion" and unset "popup-set-width" properties.

2005-12-30  Sven Neumann  <sven@gimp.org>

	* app/actions/image-actions.c
	* app/actions/view-actions.c
	* app/dialogs/image-properties-dialog.c: use new stock icons from
	GTK+ 2.8.

2005-12-30  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdockable.[ch]: #define GIMP_DOCKABLE_DRAG_OFFSET
	publically.

	* app/widgets/gimpdockbook.c (gimp_dockbook_tab_drag_end): use the
	define to reset the dockable's drag offsets.

2005-12-30  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/preferences-dialog.c
	(prefs_tree_select_callback)
	(prefs_notebook_page_callback): clean up treeview/model code.

2005-12-30  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpgradienteditor.c (view_events): typo.

2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_new):
	commented out gravity setting. While it's nice with
	"resize-windows-on-zoom" it doesn't yield satisfying behaviour in