@@ -72,6 +72,7 @@ EXPORTS
 	gimp_context_get_foreground
 	gimp_context_get_gradient
 	gimp_context_get_opacity
+	gimp_context_get_paint_method
 	gimp_context_get_paint_mode
 	gimp_context_get_palette
 	gimp_context_get_pattern
@@ -84,6 +85,7 @@ EXPORTS
 	gimp_context_set_foreground
 	gimp_context_set_gradient
 	gimp_context_set_opacity
+	gimp_context_set_paint_method
 	gimp_context_set_paint_mode
 	gimp_context_set_palette
 	gimp_context_set_pattern
