@@ -31,6 +31,8 @@ G_BEGIN_DECLS
 
 gboolean             gimp_context_push               (void);
 gboolean             gimp_context_pop                (void);
+gchar*               gimp_context_get_paint_method   (void);
+gboolean             gimp_context_set_paint_method   (const gchar          *name);
 gboolean             gimp_context_get_foreground     (GimpRGB              *foreground);
 gboolean             gimp_context_set_foreground     (const GimpRGB        *foreground);
 gboolean             gimp_context_get_background     (GimpRGB              *background);
